--- a/Frontend/user/user.html
+++ b/Frontend/user/user.html
@@ -59,15 +59,15 @@
     <div class="sidebar">
         <ul class="sidebar--items">
             <li>
-                <a href="#" id="active--link">
+                <a href="user.html" id="active--link">
                     <span class="icon icon-1"><i class="ri-layout-grid-line"></i></span>
-                    <span class="sidebar--item">Control</span>
+                    <span class="sidebar--item">Tareas asignadas </span>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a @click="viewTasksCompletes">
                     <span class="icon icon-2"><i class="ri-calendar-2-line"></i></span>
-                    <span class="sidebar--item">Horario</span>
+                    <span class="sidebar--item">Tareas Completas </span>
                 </a>
             </li>
 
