se añade funcionalidad de reportes por parte del gerente

--- a/Frontend/Manager_area/manager.html
+++ b/Frontend/Manager_area/manager.html
@@ -80,6 +80,12 @@
                         <span class="sidebar--item">Empleados</span>
                     </a>
                 </li>
+                <li>
+                    <a href="#" @click="generarInforme">
+                        <span class="icon icon-9"><i class="ri-file-download-line"></i></span>
+                        <span class="sidebar--item">Generar Informe</span>
+                    </a>
+                </li>
             </ul>
             <li>
                 <a href="#" @click="logout">
