--- a/Frontend/Admin/viewEmp.html
+++ b/Frontend/Admin/viewEmp.html
@@ -45,10 +45,14 @@
         <i class="ri-menu-line icon icon-0 menu"></i>
         <h2>Hosp<span>Ital</span></h2>
     </div>
-    <div class="search--notification--profile">
-        <button class="button--notification--profile">
-            <div class="picon lock" title="Notificaciones">
-                <i class="fa fa-bell"></i>
+    <div class="header-user">
+        <p class="user"></p>
+    </div>
+
+    <div class="search--user--profile">
+        <button class="button--user--profile">
+            <div class="picon lock" >
+                <i class="fa fa-user"></i>
             </div>
         </button>
     </div>
