--- a/Frontend/Manager_area/manager.html
+++ b/Frontend/Manager_area/manager.html
@@ -63,10 +63,10 @@
         <div class="header-user">
             <p class="user">{{ idGerente }}</p>
         </div>
-        <div class="search--notification--profile">
-            <button class="button--notification--profile">
-                <div class="picon lock" title="Notificaciones">
-                    <i class="fa fa-bell"></i>
+        <div class="search--user--profile">
+            <button class="button--user--profile">
+                <div class="picon lock" >
+                    <i class="fa fa-user"></i>
                 </div>
             </button>
         </div>
