--- a/Frontend/user/user-complete-tasks.html
+++ b/Frontend/user/user-complete-tasks.html
@@ -47,8 +47,8 @@
         <i class="ri-menu-line icon icon-0 menu"></i>
         <h2>Hosp<span>Ital</span></h2>
     </div>
-    <div class="search--notification--profile">
-        <button class="button--notification--profile">
+    <div class="search--user--profile">
+        <button class="button--user--profile">
             <div class="picon lock" title="Notificaciones">
                 <i class="fa fa-bell"></i>
             </div>
@@ -65,7 +65,7 @@
                 </a>
             </li>
             <li>
-                <a href="user-complete-tasks.html">
+                <a href="#" >
                     <span class="icon icon-2"><i class="ri-calendar-2-line"></i></span>
                     <span class="sidebar--item">Tareas Completas </span>
                 </a>
@@ -74,7 +74,7 @@
         </ul>
         <ul class="sidebar--bottom-items">
             <li>
-                <a href="../index.html">
+                <a href="#" @click="logout">
                     <span class="icon icon-8"><i class="ri-logout-box-r-line"></i></span>
                     <span class="sidebar--item">Logout</span>
                 </a>
@@ -109,7 +109,6 @@
                 </div>
             </div>
         </div>
-    </div>
 </section>
 <script src="employee.js"></script>
 </body>
