Ajuste del Boton
Se ajusto La parte del boton y se comento doden se puede editar los coleres de la tarea

--- a/Frontend/Admin/viewEmp.html
+++ b/Frontend/Admin/viewEmp.html
@@ -61,7 +61,7 @@
     <div class="sidebar">
         <ul class="sidebar--items">
             <li>
-                <a href="super-admin.html" id="active--link">
+                <a href="super-admin.html" >
                     <span class="icon icon-1"><i class="ri-layout-grid-line"></i></span>
                     <span class="sidebar--item">Control</span>
                 </a>
@@ -69,7 +69,7 @@
             <li>
             </li>
             <li>
-                <a href="viewEmp.html">
+                <a href="viewEmp.html" id="active--link">
                     <span class="icon icon-2"><i class="ri-calendar-2-line"></i></span>
                     <span class="sidebar--item">Ver Lista Empleados </span>
                 </a>
@@ -137,6 +137,7 @@
                 </tr>
                 </tbody>
             </table>
+            <!--
             <div class="pagination-controls">
                 <button @click="paginaActual > 1 && cambiarPagina(paginaActual - 1)" :disabled="paginaActual === 1">
                     <i class="fa fa-arrow-left"></i>
@@ -147,6 +148,7 @@
                     <i class="fa fa-arrow-right"></i>
                 </button>
             </div>
+            -->
         </div>
     </div>
     </div>
