--- a/Frontend/Admin/super-admin.html
+++ b/Frontend/Admin/super-admin.html
@@ -63,13 +63,13 @@
         <div class="sidebar">
             <ul class="sidebar--items">
                 <li>
-                    <a href="#" id="active--link">
+                    <a href="super-admin.html" id="active--link">
                         <span class="icon icon-1"><i class="ri-layout-grid-line"></i></span>
                         <span class="sidebar--item">Control</span>
                     </a>
                 </li>
                 <li>
-                    <a href="viewEmp.html">
+                    <a href="viewEmp.html" >
                         <span class="icon icon-2"><i class="ri-calendar-2-line"></i></span>
                         <span class="sidebar--item">Ver Lista Empleados </span>
                     </a>
