--- a/Frontend/user/user-complete-tasks.html
+++ b/Frontend/user/user-complete-tasks.html
@@ -59,13 +59,13 @@
     <div class="sidebar">
         <ul class="sidebar--items">
             <li>
-                <a href="user.html" id="active--link">
+                <a href="user.html" >
                     <span class="icon icon-1"><i class="ri-layout-grid-line"></i></span>
                     <span class="sidebar--item">Tareas asignadas </span>
                 </a>
             </li>
             <li>
-                <a href="#" >
+                <a href="#" id="active--link" >
                     <span class="icon icon-2"><i class="ri-calendar-2-line"></i></span>
                     <span class="sidebar--item">Tareas Completas </span>
                 </a>
