--- a/Frontend/user/user.html
+++ b/Frontend/user/user.html
@@ -146,7 +146,7 @@
 <!-- Modal de tareas completadas -->
 <div v-if="tareasComp.length > 0" class="modal-overlay" @click="closeModal">
     <div class="modal-content" @click.stop>
-        <h3>Tareas Completadas</h3>
+        <h1>Tareas Completadas</h1>
         <div v-for="tarea in tareasComp" :key="tarea.ID_TAREA" class="task-card-completa">
             <h4>{{ tarea.NOMBRE }}</h4>
             <p>{{ tarea.DESCRIPCION }}</p>
@@ -154,7 +154,7 @@
             <p><strong>Vencimiento:</strong> {{ formatFecha(tarea.FECHA_VENCIMIENTO) }}</p>
             <p><strong>Prioridad:</strong> {{ tarea.PRIORIDAD }}</p>
         </div>
-        <button @click="closeModal">Cerrar</button>
+        <button @click="closeModal" class="close-btn" ><i class="fa fa-close"></i></button>
     </div>
 </div>
 
